 - [web] append ics file extension when importing events (#2308)
 - [web] handle URI in vCard photos (#2683)
 - [web] handle semicolon in values during LDIF import (#1760)
 - [web] fixed computation of week number (#3973, #3976)
 - [web] fixed saving of inactive calendars (#3862, #3980)
 - [web] fixed public URLs to Calendars (#3974)
 - [eas] properly skip folders we don't want to synchronize (#3943)
 - [eas] fixed 30 mins freebusy offset with S Planner
 - [eas] now correctly handles reminders on tasks (#3964)
 - [eas] always force save events creation over EAS (#3958)
 - [eas] do not decode from hex the event's UID (#3965)
 - [eas] add support for "other addresses" (#3966)
 - [eas] provide correct response status when sending too big mails (#3956)

3.2.4 (2016-12-01)
------------------

New features
 - [core] new sogo-tool cleanup user feature

Enhancements
 - [core] added handling of BYSETPOS for BYDAY in recurrence rules
 - [web] added sort by start date for tasks (#3840)

Bug fixes
 - [web] fixed JavaScript exception when SOGo is launched from an external link (#3900)
 - [web] restored fetching of freebusy information of MS Exchange contacts
 - [web] fixed mail attribute when importing an LDIF file (#3878)
 - [web] don't save empty custom auto-reply subject
 - [web] fixed detection of session expiration
 - [eas] properly escape all GAL responses (#3923)

3.2.3 (2016-11-25)
------------------

New features
 - [core] added photo support for LDAP-based address books (#747, #2184)

Enhancements
 - [web] updated CKEditor to version 4.6.0
 - [web] updated Angular to version 1.5.9

Bug fixes
 - [web] restore attributes when rewriting base64-encoded img tags (#3814)
 - [web] improve alarms dialog (#3909)
 - [eas] fixed EAS delete operation

3.2.2 (2016-11-23)
------------------

New features
 - [core] support repetitive email alarms on tasks and events (#1053)
 - [web] allow to hide center column on large screens (#3861)